<resources>
    <string name="app_name">SpaceItemDeliveryApp</string>
    <string name="create_space_label_title">Dağıtılacak Puan:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="warning_spacecraft_name">Lütfen uzay aracınıza bir isim verin.</string>
    <string name="spacecarft_created_successfully">Uzay aracı başarıyla oluşturuldu.</string>
    <string name="spacecraft_name_hint">Uzay aracına bir isim ver..</string>
    <string name="durability">Dayanıklılık</string>
    <string name="speed">Hız</string>
    <string name="capacity">Kapasite</string>
    <string name="continue_button">Devam Et</string>
    <string name="set_travel">Yolculuk Yap</string>
    <string name="search">Ara..</string>
    <string name="favorites">Favoriler</string>
    <string name="station">İstasyon</string>
</resources>