<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.main.create_spacecraft.CreateSpaceCraftFragment"
    android:clickable="true"
    android:focusable="true"
    android:background="@color/white"
    android:padding="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/constraintTotalPoint">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/create_space_label_title"
            android:textSize="16sp"
            android:textColor="@color/colorPrimaryDark"
            android:id="@+id/labelTitle"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/create_space_point_border"
            android:text="12"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/labelTitle"
            android:textSize="16sp"
            android:paddingVertical="8dp"
            android:paddingHorizontal="16dp"
            android:layout_marginLeft="16dp"
            android:id="@+id/textTotalPoint"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintTop_toBottomOf="@id/constraintTotalPoint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:id="@+id/dividerTop"/>

    <EditText
        android:id="@+id/editSpaceCraftName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/dividerTop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"
        android:hint="@string/spacecraft_name_hint"
        android:inputType="text"
        android:textColorHint="@color/hintColor"
        android:paddingVertical="10dp"
        android:paddingHorizontal="16dp"
        android:background="@drawable/create_space_point_border"
        android:layout_marginHorizontal="16dp"
        android:maxLines="1"
        android:maxLength="96"
        android:textSize="14sp"
        android:textColor="@color/colorPrimaryDark"
        android:autofillHints="false" />

    <TextView
        android:id="@+id/labelDurability"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/editSpaceCraftName"
        app:layout_constraintStart_toStartOf="@id/editSpaceCraftName"
        android:text="@string/durability"
        android:textSize="16sp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginTop="24dp"
        />

    <TextView
        android:id="@+id/textDurability"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/editSpaceCraftName"
        app:layout_constraintEnd_toEndOf="@id/editSpaceCraftName"
        android:text="1"
        android:textSize="16sp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginTop="24dp"
        />

    <androidx.appcompat.widget.AppCompatSeekBar
        android:id="@+id/seekBarDurability"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/CustomSeekBar"
        android:splitTrack="false"
        app:layout_constraintTop_toBottomOf="@id/labelDurability"
        android:layout_marginHorizontal="4dp"
        android:layout_marginTop="16dp"
        android:paddingHorizontal="16dp"
        android:progress="0"
        android:max="12"
        android:progressDrawable="@drawable/seekbar_progress"
        android:thumb="@drawable/seekbar_thumb"
        />

    <TextView
        android:id="@+id/labelSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/seekBarDurability"
        app:layout_constraintStart_toStartOf="@id/editSpaceCraftName"
        android:text="@string/speed"
        android:textSize="16sp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginTop="24dp"
        />

    <TextView
        android:id="@+id/textSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/seekBarDurability"
        app:layout_constraintEnd_toEndOf="@id/editSpaceCraftName"
        android:text="1"
        android:textSize="16sp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginTop="24dp"
        />

    <androidx.appcompat.widget.AppCompatSeekBar
        android:id="@+id/seekBarSpeed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/CustomSeekBar"
        android:splitTrack="false"
        app:layout_constraintTop_toBottomOf="@id/labelSpeed"
        android:layout_marginHorizontal="4dp"
        android:layout_marginTop="16dp"
        android:max="12"
        android:progressDrawable="@drawable/seekbar_progress"
        android:thumb="@drawable/seekbar_thumb"
        android:paddingHorizontal="16dp"/>

    <TextView
        android:id="@+id/labelCapacity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/seekBarSpeed"
        app:layout_constraintStart_toStartOf="@id/editSpaceCraftName"
        android:text="@string/capacity"
        android:textSize="16sp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginTop="24dp"
        />

    <TextView
        android:id="@+id/textCapacity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/seekBarSpeed"
        app:layout_constraintEnd_toEndOf="@id/editSpaceCraftName"
        android:text="1"
        android:textSize="16sp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginTop="24dp"
        />

    <androidx.appcompat.widget.AppCompatSeekBar
        android:id="@+id/seekBarCapacity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/CustomSeekBar"
        android:splitTrack="false"
        app:layout_constraintTop_toBottomOf="@id/labelCapacity"
        android:layout_marginHorizontal="4dp"
        android:layout_marginTop="16dp"
        android:max="12"
        android:progressDrawable="@drawable/seekbar_progress"
        android:thumb="@drawable/seekbar_thumb"
        android:paddingHorizontal="16dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnContinue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/continue_button"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/seekBarCapacity"
        android:layout_marginTop="36dp"
        android:layout_marginHorizontal="48dp"
        android:textSize="14sp"/>
</androidx.constraintlayout.widget.ConstraintLayout>